v/0.7.0/_sources/examples/09_stormcast_example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/09_stormcast_example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_09_stormcast_example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_09_stormcast_example.py:


Running StormCast Inference
===========================

Basic StormCast inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using StormCast. For details about the stormcast model,
see

 - https://arxiv.org/abs/2408.10958

.. GENERATED FROM PYTHON SOURCE LINES 33-38

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 40-44

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 46-55

Thus, we need the following:

- Prognostic Model: Use the built in StormCast Model :py:class:`earth2studio.models.px.StormCast`.
- Datasource: Pull data from the HRRR data api :py:class:`earth2studio.data.HRRR`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

StormCast also requires a conditioning data source. We use a forecast data source here,
GFS_FX :py:class:`earth2studio.data.GFS_FX` which is the default, but a non-forecast
data source such as ARCO could also be used with appropriate time stamps.

.. GENERATED FROM PYTHON SOURCE LINES 57-87

.. code-block:: Python

    from datetime import datetime, timedelta

    from loguru import logger
    from tqdm import tqdm

    logger.remove()
    logger.add(lambda msg: tqdm.write(msg, end=""), colorize=True)

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import HRRR
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import StormCast

    # Load the default model package which downloads the check point from NGC
    # Use the default conditioning data source GFS_FX
    package = StormCast.load_default_package()
    model = StormCast.load_model(package)

    # Create the data source
    data = HRRR()

    # Create the IO handler, store in memory
    io = ZarrBackend()








.. GENERATED FROM PYTHON SOURCE LINES 88-96

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 4 hours

.. GENERATED FROM PYTHON SOURCE LINES 98-107

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 4
    today = datetime.today() - timedelta(days=1)
    date = today.isoformat().split("T")[0]
    io = run.deterministic([date], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-05-21 02:07:03.488 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2025-05-21 02:07:03.488 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.703 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 78934029-1026932
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.705 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 324302372-845275
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.707 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 109805738-1011795
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.708 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 36150053-1112396
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.710 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 153564918-1003109
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.711 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 40584586-2198011
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.713 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 76500494-1088329
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.714 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 121198294-1063621
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.716 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 22520833-1124637
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.717 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 319392701-1854751
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.719 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 372099134-1470213
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.720 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 94808101-1024846
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.722 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 124685178-1005270
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.723 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 375313981-862586
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.724 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 147767625-2472734
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.726 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 91318262-1086475
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.727 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 21191133-1329700
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.729 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 61897053-1089539
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.730 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 374244453-1069528
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.731 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 181014281-985934
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.732 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 196980780-2264201
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.733 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 7669738-1370824
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.734 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 23645470-1093795
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.735 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 45102199-2383386
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.736 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 122261915-1423117
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.737 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 180047863-966418
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.738 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 9040562-1118353
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.739 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 27007679-2197925
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.740 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 204285488-920404
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.741 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 93794545-1013556
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.742 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 118739619-2458675
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.743 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 139370716-998638
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.743 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 37262449-1079503
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.744 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 59494811-2402242
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.745 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 79960961-1029784
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.746 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 152577165-987753
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.747 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 170212632-2103153
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.748 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 107379543-1417569
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.749 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 103854570-2448464
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.750 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 373569347-675106
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.751 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfsfcf00.grib2 46835203-2381615
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.752 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 266858359-1290505
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.752 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 10158915-1076553
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.753 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 62986592-1307715
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.754 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 321247452-688875
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.754 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 135938972-1036490
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.755 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfsfcf00.grib2 0-409260
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.755 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 323448671-853701
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.756 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 142410803-2148857
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.756 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 4271088-2265447
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.757 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 74078934-2421560
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.758 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 178778576-1269287
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.758 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 49884064-1083900
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.759 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 321936327-1512344
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.759 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 54278300-2199826
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.760 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 151237551-1339614
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.760 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 259712177-2191300
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.761 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 77588823-1345206
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.761 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfsfcf00.grib2 26354080-643857
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.762 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 48577868-1306196
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.763 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 17725816-2356218
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.763 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 0-2198170
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.764 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 20082034-1109099
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.764 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 177816289-962287
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.765 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 47485585-1092283
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.765 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 150240359-997192
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.766 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 98074893-2202117
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.766 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 6536535-1133203
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.767 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 83219340-2203574
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.768 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 106303034-1076509
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.768 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 68622101-2201568
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.769 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfsfcf00.grib2 37461044-1214654
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.769 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 64294307-1052144
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.770 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 376176567-839221
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.770 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 13418364-2197604
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.771 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 207296143-957892
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.771 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 201865864-2419624
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.772 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 34849423-1300630
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.773 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 108797112-1008626
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.773 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 269007639-862859
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.774 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfsfcf00.grib2 44453588-2381615
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.774 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 205205892-1152537
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.775 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 138376182-994534
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.775 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 133468032-2470940
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.776 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 65346451-1042927
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.776 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 175358935-2457354
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.777 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 263859253-2172025
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.778 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 123685032-1000146
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.778 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 206358429-937714
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.779 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 268148864-858775
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.779 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 33749925-1099498
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.780 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 31377216-2372709
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.780 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 113037048-2194622
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.781 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 50967964-1062061
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.781 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 266031278-827081
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.782 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 127967409-2177236
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.782 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 92404737-1389808
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.783 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 136975462-1400720
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2025-05-21 02:07:04.784 | DEBUG    | earth2studio.data.hrrr:fetch_array:435 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20250520/conus/hrrr.t00z.wrfnatf00.grib2 88881178-2437084
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]    Fetching HRRR data:   1%|          | 1/99 [00:00<01:13,  1.34it/s]    Fetching HRRR data:   2%|▏         | 2/99 [00:00<00:36,  2.65it/s]    Fetching HRRR data:   6%|▌         | 6/99 [00:00<00:09,  9.31it/s]    Fetching HRRR data:   8%|▊         | 8/99 [00:01<00:08, 10.20it/s]    Fetching HRRR data:  11%|█         | 11/99 [00:01<00:06, 13.61it/s]    Fetching HRRR data:  14%|█▍        | 14/99 [00:01<00:05, 16.10it/s]    Fetching HRRR data:  17%|█▋        | 17/99 [00:01<00:04, 16.89it/s]    Fetching HRRR data:  23%|██▎       | 23/99 [00:01<00:03, 21.47it/s]    Fetching HRRR data:  26%|██▋       | 26/99 [00:01<00:03, 20.63it/s]    Fetching HRRR data:  31%|███▏      | 31/99 [00:02<00:02, 25.18it/s]    Fetching HRRR data:  35%|███▌      | 35/99 [00:02<00:02, 23.27it/s]    Fetching HRRR data:  38%|███▊      | 38/99 [00:02<00:02, 23.50it/s]    Fetching HRRR data:  41%|████▏     | 41/99 [00:02<00:02, 23.87it/s]    Fetching HRRR data:  44%|████▍     | 44/99 [00:02<00:02, 24.52it/s]    Fetching HRRR data:  49%|████▉     | 49/99 [00:02<00:01, 27.25it/s]    Fetching HRRR data:  53%|█████▎    | 52/99 [00:02<00:02, 22.42it/s]    Fetching HRRR data:  59%|█████▊    | 58/99 [00:03<00:01, 20.67it/s]    Fetching HRRR data:  65%|██████▍   | 64/99 [00:03<00:01, 26.20it/s]    Fetching HRRR data:  68%|██████▊   | 67/99 [00:03<00:01, 25.91it/s]    Fetching HRRR data:  71%|███████   | 70/99 [00:03<00:01, 23.74it/s]    Fetching HRRR data:  75%|███████▍  | 74/99 [00:03<00:00, 25.99it/s]    Fetching HRRR data:  78%|███████▊  | 77/99 [00:04<00:01, 21.94it/s]    Fetching HRRR data:  85%|████████▍ | 84/99 [00:04<00:00, 23.59it/s]    Fetching HRRR data:  90%|████████▉ | 89/99 [00:04<00:00, 26.95it/s]    Fetching HRRR data:  94%|█████████▍| 93/99 [00:04<00:00, 24.80it/s]    Fetching HRRR data: 100%|██████████| 99/99 [00:04<00:00, 30.13it/s]    Fetching HRRR data: 100%|██████████| 99/99 [00:04<00:00, 20.91it/s]
    2025-05-21 02:07:09.885 | SUCCESS  | earth2studio.run:deterministic:106 - Fetched data from HRRR
    2025-05-21 02:07:09.885 | WARNING  | earth2studio.io.zarr:add_array:192 - Datetime64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-05-21 02:07:09.890 | WARNING  | earth2studio.io.zarr:add_array:198 - Timedelta64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-05-21 02:07:10.027 | INFO     | earth2studio.run:deterministic:136 - Inference starting!

    Running inference:   0%|          | 0/5 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:04<00:18,  4.54s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2025-05-21 02:07:15.033 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 422290209-971925
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.036 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 214506273-603774
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.038 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 261468290-738954
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.040 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 423262134-954142
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.041 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 0-882151
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.043 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 418674783-511565
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.046 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267002921-976002
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.047 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 399716395-1243992
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.049 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 346304894-962685
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.051 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 430218789-1214946
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.053 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 260651031-817259
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.055 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 410427701-840931
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.057 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 403838573-962897
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.058 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 341689134-1251935
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.060 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 408316230-1002188
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.062 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 402864213-974360
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.063 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 338592006-908895
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.065 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267978923-940216
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.067 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 263454108-1301186
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.069 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 339500901-852349
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.070 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 210547246-1185936
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.072 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 345353784-951110
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.073 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 208522966-750534
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.074 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 207784228-738738
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.076 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 397833482-866808
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]                                                         
                                                                    2025-05-21 02:07:15.077 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 213910070-596203
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:18,  4.54s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:11,  2.14it/s]    Fetching GFS data:  12%|█▏        | 3/26 [00:00<00:04,  5.09it/s]    Fetching GFS data:  27%|██▋       | 7/26 [00:00<00:01, 11.37it/s]    Fetching GFS data:  50%|█████     | 13/26 [00:00<00:00, 20.34it/s]    Fetching GFS data:  62%|██████▏   | 16/26 [00:01<00:00, 21.57it/s]    Fetching GFS data:  81%|████████  | 21/26 [00:01<00:00, 26.88it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:01<00:00, 21.02it/s]

    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2025-05-21 02:07:32.595 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 430218789-1214946
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.637 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 399716395-1243992
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.662 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 403838573-962897
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.686 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 422290209-971925
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.709 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 418674783-511565
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.732 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 423262134-954142
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.756 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 397833482-866808
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.779 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 260651031-817259
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.802 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 345353784-951110
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.825 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267978923-940216
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.848 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 213910070-596203
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.871 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 0-882151
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.894 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 408316230-1002188
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.917 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 214506273-603774
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.940 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 341689134-1251935
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.963 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 410427701-840931
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:32.986 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267002921-976002
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.009 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 402864213-974360
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:22<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.032 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 210547246-1185936
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.056 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 208522966-750534
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.078 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 346304894-962685
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.102 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 338592006-908895
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.125 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 207784228-738738
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.148 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 261468290-738954
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.170 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 263454108-1301186
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]                                                         
                                                                    2025-05-21 02:07:33.193 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 339500901-852349
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:23<00:37, 12.46s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:15,  1.61it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:00<00:00, 41.84it/s]

    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2025-05-21 02:07:49.673 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 430218789-1214946
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.720 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 341689134-1251935
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.746 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 346304894-962685
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.770 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 418674783-511565
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.793 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 423262134-954142
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.816 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 0-882151
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.839 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 422290209-971925
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.861 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 339500901-852349
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.884 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 207784228-738738
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.907 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267002921-976002
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.929 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 214506273-603774
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.952 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 403838573-962897
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.975 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 410427701-840931
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:49.998 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 338592006-908895
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.021 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 408316230-1002188
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:39<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.044 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 263454108-1301186
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.067 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 402864213-974360
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.090 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 213910070-596203
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.112 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 345353784-951110
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.134 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 399716395-1243992
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.157 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267978923-940216
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.180 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 260651031-817259
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.203 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 397833482-866808
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.226 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 208522966-750534
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.249 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 210547246-1185936
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]                                                         
                                                                    2025-05-21 02:07:50.272 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 261468290-738954
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:40<00:29, 14.57s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:15,  1.61it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:00<00:00, 41.74it/s]

    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2025-05-21 02:08:07.610 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 422290209-971925
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.656 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 418674783-511565
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.680 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 341689134-1251935
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.704 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 346304894-962685
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.728 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 0-882151
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.751 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 423262134-954142
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.773 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 430218789-1214946
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.796 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 339500901-852349
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.818 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 207784228-738738
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.840 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267002921-976002
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.863 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 214506273-603774
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.886 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 403838573-962897
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.909 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 410427701-840931
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.932 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 338592006-908895
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.955 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 408316230-1002188
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:07.978 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 263454108-1301186
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.002 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 402864213-974360
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.025 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 213910070-596203
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:57<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.048 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 345353784-951110
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.071 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 399716395-1243992
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.094 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 267978923-940216
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.117 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 260651031-817259
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.140 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 397833482-866808
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.163 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 208522966-750534
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.186 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 210547246-1185936
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]                                                         
                                                                    2025-05-21 02:08:08.209 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20250520/00/atmos/gfs.t00z.pgrb2.0p25.f000 261468290-738954
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:58<00:15, 15.90s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:15,  1.61it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:00<00:00, 41.75it/s]

    Running inference: 100%|██████████| 5/5 [01:16<00:00, 16.97s/it]    Running inference: 100%|██████████| 5/5 [01:16<00:00, 15.29s/it]
    2025-05-21 02:08:26.468 | SUCCESS  | earth2studio.run:deterministic:146 - Inference complete
    /
    ├── Z10hl (1, 5, 512, 640) float32
    ├── Z11hl (1, 5, 512, 640) float32
    ├── Z13hl (1, 5, 512, 640) float32
    ├── Z15hl (1, 5, 512, 640) float32
    ├── Z1hl (1, 5, 512, 640) float32
    ├── Z20hl (1, 5, 512, 640) float32
    ├── Z25hl (1, 5, 512, 640) float32
    ├── Z2hl (1, 5, 512, 640) float32
    ├── Z30hl (1, 5, 512, 640) float32
    ├── Z3hl (1, 5, 512, 640) float32
    ├── Z4hl (1, 5, 512, 640) float32
    ├── Z5hl (1, 5, 512, 640) float32
    ├── Z6hl (1, 5, 512, 640) float32
    ├── Z7hl (1, 5, 512, 640) float32
    ├── Z8hl (1, 5, 512, 640) float32
    ├── Z9hl (1, 5, 512, 640) float32
    ├── hrrr_x (640,) int64
    ├── hrrr_y (512,) int64
    ├── lead_time (5,) int64
    ├── mslp (1, 5, 512, 640) float32
    ├── p10hl (1, 5, 512, 640) float32
    ├── p11hl (1, 5, 512, 640) float32
    ├── p13hl (1, 5, 512, 640) float32
    ├── p15hl (1, 5, 512, 640) float32
    ├── p1hl (1, 5, 512, 640) float32
    ├── p20hl (1, 5, 512, 640) float32
    ├── p2hl (1, 5, 512, 640) float32
    ├── p3hl (1, 5, 512, 640) float32
    ├── p4hl (1, 5, 512, 640) float32
    ├── p5hl (1, 5, 512, 640) float32
    ├── p6hl (1, 5, 512, 640) float32
    ├── p7hl (1, 5, 512, 640) float32
    ├── p8hl (1, 5, 512, 640) float32
    ├── p9hl (1, 5, 512, 640) float32
    ├── q10hl (1, 5, 512, 640) float32
    ├── q11hl (1, 5, 512, 640) float32
    ├── q13hl (1, 5, 512, 640) float32
    ├── q15hl (1, 5, 512, 640) float32
    ├── q1hl (1, 5, 512, 640) float32
    ├── q20hl (1, 5, 512, 640) float32
    ├── q25hl (1, 5, 512, 640) float32
    ├── q2hl (1, 5, 512, 640) float32
    ├── q30hl (1, 5, 512, 640) float32
    ├── q3hl (1, 5, 512, 640) float32
    ├── q4hl (1, 5, 512, 640) float32
    ├── q5hl (1, 5, 512, 640) float32
    ├── q6hl (1, 5, 512, 640) float32
    ├── q7hl (1, 5, 512, 640) float32
    ├── q8hl (1, 5, 512, 640) float32
    ├── q9hl (1, 5, 512, 640) float32
    ├── refc (1, 5, 512, 640) float32
    ├── t10hl (1, 5, 512, 640) float32
    ├── t11hl (1, 5, 512, 640) float32
    ├── t13hl (1, 5, 512, 640) float32
    ├── t15hl (1, 5, 512, 640) float32
    ├── t1hl (1, 5, 512, 640) float32
    ├── t20hl (1, 5, 512, 640) float32
    ├── t25hl (1, 5, 512, 640) float32
    ├── t2hl (1, 5, 512, 640) float32
    ├── t2m (1, 5, 512, 640) float32
    ├── t30hl (1, 5, 512, 640) float32
    ├── t3hl (1, 5, 512, 640) float32
    ├── t4hl (1, 5, 512, 640) float32
    ├── t5hl (1, 5, 512, 640) float32
    ├── t6hl (1, 5, 512, 640) float32
    ├── t7hl (1, 5, 512, 640) float32
    ├── t8hl (1, 5, 512, 640) float32
    ├── t9hl (1, 5, 512, 640) float32
    ├── time (1,) int64
    ├── u10hl (1, 5, 512, 640) float32
    ├── u10m (1, 5, 512, 640) float32
    ├── u11hl (1, 5, 512, 640) float32
    ├── u13hl (1, 5, 512, 640) float32
    ├── u15hl (1, 5, 512, 640) float32
    ├── u1hl (1, 5, 512, 640) float32
    ├── u20hl (1, 5, 512, 640) float32
    ├── u25hl (1, 5, 512, 640) float32
    ├── u2hl (1, 5, 512, 640) float32
    ├── u30hl (1, 5, 512, 640) float32
    ├── u3hl (1, 5, 512, 640) float32
    ├── u4hl (1, 5, 512, 640) float32
    ├── u5hl (1, 5, 512, 640) float32
    ├── u6hl (1, 5, 512, 640) float32
    ├── u7hl (1, 5, 512, 640) float32
    ├── u8hl (1, 5, 512, 640) float32
    ├── u9hl (1, 5, 512, 640) float32
    ├── v10hl (1, 5, 512, 640) float32
    ├── v10m (1, 5, 512, 640) float32
    ├── v11hl (1, 5, 512, 640) float32
    ├── v13hl (1, 5, 512, 640) float32
    ├── v15hl (1, 5, 512, 640) float32
    ├── v1hl (1, 5, 512, 640) float32
    ├── v20hl (1, 5, 512, 640) float32
    ├── v25hl (1, 5, 512, 640) float32
    ├── v2hl (1, 5, 512, 640) float32
    ├── v30hl (1, 5, 512, 640) float32
    ├── v3hl (1, 5, 512, 640) float32
    ├── v4hl (1, 5, 512, 640) float32
    ├── v5hl (1, 5, 512, 640) float32
    ├── v6hl (1, 5, 512, 640) float32
    ├── v7hl (1, 5, 512, 640) float32
    ├── v8hl (1, 5, 512, 640) float32
    └── v9hl (1, 5, 512, 640) float32





.. GENERATED FROM PYTHON SOURCE LINES 108-115

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 4 hours into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 117-159

.. code-block:: Python

    import cartopy
    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = f"{date}"
    variable = "t2m"
    step = 4  # lead time = 1 hr

    plt.close("all")

    # Create a correct Lambert Conformal projection
    projection = ccrs.LambertConformal(
        central_longitude=262.5,
        central_latitude=38.5,
        standard_parallels=(38.5, 38.5),
        globe=ccrs.Globe(semimajor_axis=6371229, semiminor_axis=6371229),
    )

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        model.lon,
        model.lat,
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set state lines
    ax.add_feature(
        cartopy.feature.STATES.with_scale("50m"), linewidth=0.5, edgecolor="black", zorder=2
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig(f"outputs/09_{date}_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_09_stormcast_example_001.png
   :alt: 2025-05-20 - Lead time: 4hrs
   :srcset: /examples/images/sphx_glr_09_stormcast_example_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 28.359 seconds)


.. _sphx_glr_download_examples_09_stormcast_example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 09_stormcast_example.ipynb <09_stormcast_example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 09_stormcast_example.py <09_stormcast_example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 09_stormcast_example.zip <09_stormcast_example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
