v/0.13.0/_sources/examples/09_stormcast_example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/09_stormcast_example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_09_stormcast_example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_09_stormcast_example.py:


Running StormCast Inference
===========================

Basic StormCast inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using StormCast. For details about the stormcast model,
see

 - https://arxiv.org/abs/2408.10958

.. GENERATED FROM PYTHON SOURCE LINES 31-38

.. code-block:: Python

    # /// script
    # dependencies = [
    #   "earth2studio[data,stormcast] @ git+https://github.com/NVIDIA/earth2studio.git@0.13.0",
    #   "cartopy",
    # ]
    # ///








.. GENERATED FROM PYTHON SOURCE LINES 39-44

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 46-50

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 52-61

Thus, we need the following:

- Prognostic Model: Use the built in StormCast Model :py:class:`earth2studio.models.px.StormCast`.
- Datasource: Pull data from the HRRR data api :py:class:`earth2studio.data.HRRR`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

StormCast also requires a conditioning data source. We use a forecast data source here,
GFS_FX :py:class:`earth2studio.data.GFS_FX` which is the default, but a non-forecast
data source such as ARCO could also be used with appropriate time stamps.

.. GENERATED FROM PYTHON SOURCE LINES 63-93

.. code-block:: Python

    from datetime import datetime, timedelta

    from loguru import logger
    from tqdm import tqdm

    logger.remove()
    logger.add(lambda msg: tqdm.write(msg, end=""), colorize=True)

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import HRRR
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import StormCast

    # Load the default model package which downloads the check point from NGC
    # Use the default conditioning data source GFS_FX
    package = StormCast.load_default_package()
    model = StormCast.load_model(package)

    # Create the data source
    data = HRRR()

    # Create the IO handler, store in memory
    io = ZarrBackend()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading config.json: 0%|          | 0.00/40.0 [00:00<?, ?B/s]    Downloading config.json: 100%|██████████| 40.0/40.0 [00:00<00:00, 372B/s]    Downloading config.json: 100%|██████████| 40.0/40.0 [00:00<00:00, 369B/s]
    Downloading model.yaml: 0%|          | 0.00/2.64k [00:00<?, ?B/s]    Downloading model.yaml: 100%|██████████| 2.64k/2.64k [00:00<00:00, 24.7kB/s]    Downloading model.yaml: 100%|██████████| 2.64k/2.64k [00:00<00:00, 24.4kB/s]
    Downloading StormCastUNet.0.0.mdlus: 0%|          | 0.00/300M [00:00<?, ?B/s]    Downloading StormCastUNet.0.0.mdlus: 3%|▎         | 10.0M/300M [00:00<00:04, 65.7MB/s]    Downloading StormCastUNet.0.0.mdlus: 17%|█▋        | 50.0M/300M [00:00<00:01, 214MB/s]    Downloading StormCastUNet.0.0.mdlus: 30%|███       | 90.0M/300M [00:00<00:00, 275MB/s]    Downloading StormCastUNet.0.0.mdlus: 43%|████▎     | 130M/300M [00:00<00:00, 268MB/s]     Downloading StormCastUNet.0.0.mdlus: 57%|█████▋    | 170M/300M [00:00<00:00, 299MB/s]    Downloading StormCastUNet.0.0.mdlus: 70%|███████   | 210M/300M [00:00<00:00, 320MB/s]    Downloading StormCastUNet.0.0.mdlus: 83%|████████▎ | 250M/300M [00:00<00:00, 330MB/s]    Downloading StormCastUNet.0.0.mdlus: 97%|█████████▋| 290M/300M [00:01<00:00, 340MB/s]    Downloading StormCastUNet.0.0.mdlus: 100%|██████████| 300M/300M [00:01<00:00, 299MB/s]
    Downloading EDMPrecond.0.0.mdlus: 0%|          | 0.00/462M [00:00<?, ?B/s]    Downloading EDMPrecond.0.0.mdlus: 2%|▏         | 10.0M/462M [00:00<00:06, 69.8MB/s]    Downloading EDMPrecond.0.0.mdlus: 9%|▊         | 40.0M/462M [00:00<00:02, 178MB/s]     Downloading EDMPrecond.0.0.mdlus: 15%|█▌        | 70.0M/462M [00:00<00:01, 221MB/s]    Downloading EDMPrecond.0.0.mdlus: 22%|██▏       | 100M/462M [00:00<00:01, 243MB/s]     Downloading EDMPrecond.0.0.mdlus: 28%|██▊       | 130M/462M [00:00<00:01, 257MB/s]    Downloading EDMPrecond.0.0.mdlus: 35%|███▍      | 160M/462M [00:00<00:01, 266MB/s]    Downloading EDMPrecond.0.0.mdlus: 41%|████      | 190M/462M [00:00<00:01, 271MB/s]    Downloading EDMPrecond.0.0.mdlus: 48%|████▊     | 220M/462M [00:00<00:00, 275MB/s]    Downloading EDMPrecond.0.0.mdlus: 54%|█████▍    | 250M/462M [00:01<00:00, 276MB/s]    Downloading EDMPrecond.0.0.mdlus: 61%|██████    | 280M/462M [00:01<00:00, 280MB/s]    Downloading EDMPrecond.0.0.mdlus: 69%|██████▉   | 320M/462M [00:01<00:00, 294MB/s]    Downloading EDMPrecond.0.0.mdlus: 78%|███████▊  | 360M/462M [00:01<00:00, 302MB/s]    Downloading EDMPrecond.0.0.mdlus: 87%|████████▋ | 400M/462M [00:01<00:00, 307MB/s]    Downloading EDMPrecond.0.0.mdlus: 95%|█████████▌| 440M/462M [00:01<00:00, 311MB/s]    Downloading EDMPrecond.0.0.mdlus: 100%|██████████| 462M/462M [00:01<00:00, 276MB/s]
    Downloading metadata.zarr.zip: 0%|          | 0.00/1.71M [00:00<?, ?B/s]    Downloading metadata.zarr.zip: 100%|██████████| 1.71M/1.71M [00:00<00:00, 15.7MB/s]    Downloading metadata.zarr.zip: 100%|██████████| 1.71M/1.71M [00:00<00:00, 15.4MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 94-102

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 4 hours

.. GENERATED FROM PYTHON SOURCE LINES 104-113

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 4
    today = datetime.today() - timedelta(days=1)
    date = today.isoformat().split("T")[0]
    io = run.deterministic([date], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-03-19 08:13:59.793 | INFO     | earth2studio.run:deterministic:78 - Running simple workflow!
    2026-03-19 08:13:59.793 | INFO     | earth2studio.run:deterministic:85 - Inference device: cuda
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.767 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfsfcf00.grib2 25506704-621847
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.769 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 82673531-2448502
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.772 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 5812623-1136448
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.774 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 96838265-2460769
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.776 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 169012180-916746
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.778 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfsfcf00.grib2 46230603-2381615
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.779 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 18393845-1104061
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.781 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 8221172-1120707
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.783 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 111158948-2470606
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.785 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 30939759-1095463
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.787 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 125230464-2474514
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.788 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 129887953-977742
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.790 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 43907806-1090910
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.792 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 46163863-1075804
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.793 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 138652426-2476653
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.795 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 57525267-1084087
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.796 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 164547208-2467120
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.798 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 71268602-1077413
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.800 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 189296568-2435224
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.801 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 20708003-1120398
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.802 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 85122033-1065008
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.804 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 248115879-2197693
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.805 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 99299034-1056044
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.806 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 301436613-1880279
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.807 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 113629554-1038755
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.808 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 351264042-1458968
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.809 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 73521598-1006520
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.810 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 127704978-1009872
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.811 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 0-2243258
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.812 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 141129079-982722
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.813 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 143247921-956027
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.814 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 12356549-2242765
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.815 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 167014328-943863
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.817 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 24863984-2241290
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.818 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 191731792-914963
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.819 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 37334992-2241167
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.820 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 250313572-794711
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.821 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 50391183-2240299
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.822 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 303316892-668698
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.822 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 194267634-877768
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.823 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 64025686-2239297
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.824 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfsfcf00.grib2 37020094-1236438
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.824 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 352723010-602921
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.825 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 77695690-2237048
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.826 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 6949071-1272101
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.826 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 87378801-990984
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.827 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 354409374-850032
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.828 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 91638193-2230928
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.828 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 59773897-1040512
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.829 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 19497906-1210097
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.830 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 101571949-996299
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.830 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 305495661-833440
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.831 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 105820135-2207076
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.832 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 32035222-1183624
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.832 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 33218846-1105938
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.833 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 120074108-2195445
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.833 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 44998716-1165147
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.834 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 252307736-816327
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.835 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 133708163-2161652
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.835 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 115886393-994174
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.836 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 58609354-1164543
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.837 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 60814409-1031903
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.837 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 159856941-2352982
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.838 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 72346015-1175583
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.839 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 102568248-1015646
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.840 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 185048024-2279333
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.841 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 86187041-1191760
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.841 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 244212827-2205835
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.842 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 100355078-1216871
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.842 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 88369785-1009206
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.843 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfsfcf00.grib2 0-389335
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.844 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 114668309-1218084
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.844 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 74528118-1014399
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.845 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 128714850-1173103
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.846 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 9341879-1092982
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.846 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 142111801-1136120
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.847 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 47239667-1053526
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.848 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 167958191-1053989
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.848 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 192646755-1620879
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.849 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 34324784-1071740
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.850 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 251108283-1199453
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.850 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 21828401-1089074
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.851 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 303985590-1510071
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.852 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 130865695-1028729
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.852 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 353325931-1083443
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.853 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 116880567-1022644
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.854 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 3517470-2295153
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.854 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 16038594-2355251
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.855 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 144203948-1015844
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.855 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 28569173-2370586
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.856 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 169928926-989081
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.857 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 41519181-2388625
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.857 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 195145402-945845
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.858 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 55115448-2409819
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.859 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 253124063-831001
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.859 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfsfcf00.grib2 43848988-2381615
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.860 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 68837224-2431378
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.861 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 306329101-823243
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-03-19 08:14:05.861 | DEBUG    | earth2studio.data.hrrr:fetch_array:505 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20260318/conus/hrrr.t00z.wrfnatf00.grib2 355259406-843003
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]    Fetching HRRR data:   1%|          | 1/99 [00:00<01:14,  1.31it/s]    Fetching HRRR data:   5%|▌         | 5/99 [00:00<00:13,  7.04it/s]    Fetching HRRR data:   9%|▉         | 9/99 [00:01<00:07, 11.76it/s]    Fetching HRRR data:  15%|█▌        | 15/99 [00:01<00:04, 19.23it/s]    Fetching HRRR data:  20%|██        | 20/99 [00:01<00:03, 24.80it/s]    Fetching HRRR data:  24%|██▍       | 24/99 [00:01<00:02, 27.73it/s]    Fetching HRRR data:  28%|██▊       | 28/99 [00:01<00:02, 29.34it/s]    Fetching HRRR data:  33%|███▎      | 33/99 [00:01<00:02, 30.24it/s]    Fetching HRRR data:  40%|████      | 40/99 [00:01<00:01, 36.13it/s]    Fetching HRRR data:  45%|████▌     | 45/99 [00:01<00:01, 36.79it/s]    Fetching HRRR data:  49%|████▉     | 49/99 [00:02<00:01, 36.43it/s]    Fetching HRRR data:  55%|█████▍    | 54/99 [00:02<00:01, 36.40it/s]    Fetching HRRR data:  61%|██████    | 60/99 [00:02<00:00, 40.37it/s]    Fetching HRRR data:  66%|██████▌   | 65/99 [00:02<00:00, 41.32it/s]    Fetching HRRR data:  71%|███████   | 70/99 [00:02<00:00, 42.48it/s]    Fetching HRRR data:  77%|███████▋  | 76/99 [00:02<00:00, 40.86it/s]    Fetching HRRR data:  84%|████████▍ | 83/99 [00:02<00:00, 45.67it/s]    Fetching HRRR data:  89%|████████▉ | 88/99 [00:02<00:00, 44.42it/s]    Fetching HRRR data:  94%|█████████▍| 93/99 [00:03<00:00, 44.71it/s]    Fetching HRRR data:  99%|█████████▉| 98/99 [00:03<00:00, 17.57it/s]    Fetching HRRR data: 100%|██████████| 99/99 [00:04<00:00, 23.47it/s]
    2026-03-19 08:14:16.238 | SUCCESS  | earth2studio.run:deterministic:109 - Fetched data from HRRR
    2026-03-19 08:14:16.301 | INFO     | earth2studio.run:deterministic:139 - Inference starting!

    Running inference:   0%|          | 0/5 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:01<00:04,  1.03s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2026-03-19 08:14:22.213 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 269983967-550732
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.217 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 338938113-905425
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.219 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 263597551-812239
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.221 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 400292556-972815
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.223 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 397175662-1218758
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.226 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 427911974-1183458
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.228 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 216842867-595028
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.230 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 217437895-602717
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.232 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 213515984-1176856
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.235 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 210795833-739730
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.247 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 346616396-950641
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.249 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 420779932-953747
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.251 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 211535563-754138
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.253 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 401265371-960425
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.254 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 342043530-1222332
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.256 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 405542544-999835
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.257 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 264409790-723815
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.259 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 407612408-837990
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.260 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 0-1010545
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.261 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 395273660-864295
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.263 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 416208452-514115
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.264 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 270534699-552032
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.265 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 266372924-1261706
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.267 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 419807990-971942
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.268 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 345636514-979882
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]                                                         
                                                                    2026-03-19 08:14:22.270 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f000 339843538-852276
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  20%|██        | 1/5 [00:05<00:04,  1.03s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:18,  1.37it/s]    Fetching GFS data:  23%|██▎       | 6/26 [00:00<00:02,  9.32it/s]    Fetching GFS data:  42%|████▏     | 11/26 [00:00<00:00, 16.71it/s]    Fetching GFS data:  65%|██████▌   | 17/26 [00:01<00:00, 24.79it/s]    Fetching GFS data:  96%|█████████▌| 25/26 [00:01<00:00, 32.18it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:01<00:00, 13.02it/s]

    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2026-03-19 08:14:32.283 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 265737529-815281
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.286 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 400847197-1217924
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.288 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 0-1009653
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.290 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 341090194-904604
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.292 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 344195754-1222504
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.295 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 272127357-550691
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.297 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 348731028-949906
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.299 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 268514435-1265398
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:15<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.301 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 272678048-552296
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.304 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 409202155-998962
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.306 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 411271351-837913
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.308 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 214990062-1176428
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.310 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 398943866-863859
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.312 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 347790130-940898
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.314 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 212265336-739332
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.316 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 425962924-949221
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.318 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 341994798-852201
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.320 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 403961231-971490
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.322 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 424992386-970538
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.323 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 420380174-513690
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.325 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 219034874-602953
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.326 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 266552810-723590
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.327 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 218439809-595065
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.329 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 213004668-754910
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.330 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 404932721-959985
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]                                                         
                                                                    2026-03-19 08:14:32.331 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f001 440285178-1182634
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  40%|████      | 2/5 [00:16<00:26,  8.93s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:11,  2.11it/s]    Fetching GFS data:   8%|▊         | 2/26 [00:00<00:08,  2.96it/s]    Fetching GFS data:  27%|██▋       | 7/26 [00:00<00:01, 11.93it/s]    Fetching GFS data:  46%|████▌     | 12/26 [00:00<00:00, 20.05it/s]    Fetching GFS data:  77%|███████▋  | 20/26 [00:01<00:00, 31.24it/s]    Fetching GFS data:  96%|█████████▌| 25/26 [00:01<00:00, 31.69it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:01<00:00, 17.75it/s]

    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2026-03-19 08:14:41.145 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 343727705-848967
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.148 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 220908139-603124
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.150 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 405774951-971595
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.152 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 268282953-723764
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.154 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 413088340-838108
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.157 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 442345097-1182658
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.159 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 214872100-755581
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.161 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 267470675-812278
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.163 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 274408493-552995
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.165 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 402662344-1217517
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.168 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 342823376-904329
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.170 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 349656643-940437
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.172 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 406746546-960104
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.174 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 345933357-1352973
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.176 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 220312709-595430
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.178 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 270246189-1265961
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.180 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 422200118-513049
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.182 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 273857961-550532
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.184 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 411016097-998727
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.186 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 216859055-1176943
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.187 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 400758781-863535
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.188 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 427782818-948947
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.190 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 214133606-738494
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.191 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 350597080-949476
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.192 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 426812230-970588
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]                                                         
                                                                    2026-03-19 08:14:41.194 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f002 0-1009167
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  60%|██████    | 3/5 [00:24<00:17,  8.87s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:11,  2.19it/s]    Fetching GFS data:   8%|▊         | 2/26 [00:00<00:08,  2.93it/s]    Fetching GFS data:  38%|███▊      | 10/26 [00:00<00:00, 18.03it/s]    Fetching GFS data:  65%|██████▌   | 17/26 [00:00<00:00, 28.43it/s]    Fetching GFS data:  88%|████████▊ | 23/26 [00:01<00:00, 33.39it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:01<00:00, 22.45it/s]

    Running inference:  80%|████████  | 4/5 [00:33<00:08,  8.86s/it]    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                         
                                                                    2026-03-19 08:14:50.580 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 268162132-724073
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.583 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 410434911-995317
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.585 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 426237969-971054
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.587 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 220522750-603121
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.590 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 402077534-1218058
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.592 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 345557866-1353441
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.594 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 400171692-863174
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.596 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 421624873-514201
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.598 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 216475799-1176599
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.601 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 350223130-948914
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.603 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 213749479-739213
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.605 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 0-1004886
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.607 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 349282682-940448
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.609 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 270125726-1266456
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.611 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 342444351-900498
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.623 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 441842977-1183198
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.624 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 405192664-972144
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.626 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 274283590-552882
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.627 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 406164808-959904
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.628 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 219926754-595996
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.630 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 267349945-812187
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.631 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 343344849-849064
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.632 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 214488692-754830
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.634 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 412508757-838317
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.635 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 427209023-953019
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]                                                         
                                                                    2026-03-19 08:14:50.636 | DEBUG    | earth2studio.data.gfs:fetch_array:382 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20260318/00/atmos/gfs.t00z.pgrb2.0p25.f003 273738056-545534
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]
    Running inference:  80%|████████  | 4/5 [00:34<00:08,  8.86s/it]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:10,  2.33it/s]    Fetching GFS data:   8%|▊         | 2/26 [00:00<00:06,  3.58it/s]    Fetching GFS data:  12%|█▏        | 3/26 [00:00<00:04,  5.05it/s]    Fetching GFS data:  27%|██▋       | 7/26 [00:00<00:01, 12.29it/s]    Fetching GFS data:  65%|██████▌   | 17/26 [00:00<00:00, 32.96it/s]    Fetching GFS data:  88%|████████▊ | 23/26 [00:01<00:00, 39.75it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:01<00:00, 24.05it/s]

    Running inference: 100%|██████████| 5/5 [00:42<00:00,  8.95s/it]    Running inference: 100%|██████████| 5/5 [00:42<00:00,  8.45s/it]
    2026-03-19 08:14:58.534 | SUCCESS  | earth2studio.run:deterministic:151 - 
    Inference complete
    /
    ├── Z10hl (1, 5, 512, 640) float32
    ├── Z11hl (1, 5, 512, 640) float32
    ├── Z13hl (1, 5, 512, 640) float32
    ├── Z15hl (1, 5, 512, 640) float32
    ├── Z1hl (1, 5, 512, 640) float32
    ├── Z20hl (1, 5, 512, 640) float32
    ├── Z25hl (1, 5, 512, 640) float32
    ├── Z2hl (1, 5, 512, 640) float32
    ├── Z30hl (1, 5, 512, 640) float32
    ├── Z3hl (1, 5, 512, 640) float32
    ├── Z4hl (1, 5, 512, 640) float32
    ├── Z5hl (1, 5, 512, 640) float32
    ├── Z6hl (1, 5, 512, 640) float32
    ├── Z7hl (1, 5, 512, 640) float32
    ├── Z8hl (1, 5, 512, 640) float32
    ├── Z9hl (1, 5, 512, 640) float32
    ├── hrrr_x (640,) float64
    ├── hrrr_y (512,) float64
    ├── lead_time (5,) timedelta64
    ├── mslp (1, 5, 512, 640) float32
    ├── p10hl (1, 5, 512, 640) float32
    ├── p11hl (1, 5, 512, 640) float32
    ├── p13hl (1, 5, 512, 640) float32
    ├── p15hl (1, 5, 512, 640) float32
    ├── p1hl (1, 5, 512, 640) float32
    ├── p20hl (1, 5, 512, 640) float32
    ├── p2hl (1, 5, 512, 640) float32
    ├── p3hl (1, 5, 512, 640) float32
    ├── p4hl (1, 5, 512, 640) float32
    ├── p5hl (1, 5, 512, 640) float32
    ├── p6hl (1, 5, 512, 640) float32
    ├── p7hl (1, 5, 512, 640) float32
    ├── p8hl (1, 5, 512, 640) float32
    ├── p9hl (1, 5, 512, 640) float32
    ├── q10hl (1, 5, 512, 640) float32
    ├── q11hl (1, 5, 512, 640) float32
    ├── q13hl (1, 5, 512, 640) float32
    ├── q15hl (1, 5, 512, 640) float32
    ├── q1hl (1, 5, 512, 640) float32
    ├── q20hl (1, 5, 512, 640) float32
    ├── q25hl (1, 5, 512, 640) float32
    ├── q2hl (1, 5, 512, 640) float32
    ├── q30hl (1, 5, 512, 640) float32
    ├── q3hl (1, 5, 512, 640) float32
    ├── q4hl (1, 5, 512, 640) float32
    ├── q5hl (1, 5, 512, 640) float32
    ├── q6hl (1, 5, 512, 640) float32
    ├── q7hl (1, 5, 512, 640) float32
    ├── q8hl (1, 5, 512, 640) float32
    ├── q9hl (1, 5, 512, 640) float32
    ├── refc (1, 5, 512, 640) float32
    ├── t10hl (1, 5, 512, 640) float32
    ├── t11hl (1, 5, 512, 640) float32
    ├── t13hl (1, 5, 512, 640) float32
    ├── t15hl (1, 5, 512, 640) float32
    ├── t1hl (1, 5, 512, 640) float32
    ├── t20hl (1, 5, 512, 640) float32
    ├── t25hl (1, 5, 512, 640) float32
    ├── t2hl (1, 5, 512, 640) float32
    ├── t2m (1, 5, 512, 640) float32
    ├── t30hl (1, 5, 512, 640) float32
    ├── t3hl (1, 5, 512, 640) float32
    ├── t4hl (1, 5, 512, 640) float32
    ├── t5hl (1, 5, 512, 640) float32
    ├── t6hl (1, 5, 512, 640) float32
    ├── t7hl (1, 5, 512, 640) float32
    ├── t8hl (1, 5, 512, 640) float32
    ├── t9hl (1, 5, 512, 640) float32
    ├── time (1,) datetime64
    ├── u10hl (1, 5, 512, 640) float32
    ├── u10m (1, 5, 512, 640) float32
    ├── u11hl (1, 5, 512, 640) float32
    ├── u13hl (1, 5, 512, 640) float32
    ├── u15hl (1, 5, 512, 640) float32
    ├── u1hl (1, 5, 512, 640) float32
    ├── u20hl (1, 5, 512, 640) float32
    ├── u25hl (1, 5, 512, 640) float32
    ├── u2hl (1, 5, 512, 640) float32
    ├── u30hl (1, 5, 512, 640) float32
    ├── u3hl (1, 5, 512, 640) float32
    ├── u4hl (1, 5, 512, 640) float32
    ├── u5hl (1, 5, 512, 640) float32
    ├── u6hl (1, 5, 512, 640) float32
    ├── u7hl (1, 5, 512, 640) float32
    ├── u8hl (1, 5, 512, 640) float32
    ├── u9hl (1, 5, 512, 640) float32
    ├── v10hl (1, 5, 512, 640) float32
    ├── v10m (1, 5, 512, 640) float32
    ├── v11hl (1, 5, 512, 640) float32
    ├── v13hl (1, 5, 512, 640) float32
    ├── v15hl (1, 5, 512, 640) float32
    ├── v1hl (1, 5, 512, 640) float32
    ├── v20hl (1, 5, 512, 640) float32
    ├── v25hl (1, 5, 512, 640) float32
    ├── v2hl (1, 5, 512, 640) float32
    ├── v30hl (1, 5, 512, 640) float32
    ├── v3hl (1, 5, 512, 640) float32
    ├── v4hl (1, 5, 512, 640) float32
    ├── v5hl (1, 5, 512, 640) float32
    ├── v6hl (1, 5, 512, 640) float32
    ├── v7hl (1, 5, 512, 640) float32
    ├── v8hl (1, 5, 512, 640) float32
    └── v9hl (1, 5, 512, 640) float32





.. GENERATED FROM PYTHON SOURCE LINES 114-121

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 4 hours into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 123-165

.. code-block:: Python

    import cartopy
    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = f"{date}"
    variable = "t2m"
    step = 4  # lead time = 1 hr

    plt.close("all")

    # Create a correct Lambert Conformal projection
    projection = ccrs.LambertConformal(
        central_longitude=262.5,
        central_latitude=38.5,
        standard_parallels=(38.5, 38.5),
        globe=ccrs.Globe(semimajor_axis=6371229, semiminor_axis=6371229),
    )

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        model.lon,
        model.lat,
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set state lines
    ax.add_feature(
        cartopy.feature.STATES.with_scale("50m"), linewidth=0.5, edgecolor="black", zorder=2
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig(f"outputs/09_{date}_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_09_stormcast_example_001.png
   :alt: 2026-03-18 - Lead time: 4hrs
   :srcset: /examples/images/sphx_glr_09_stormcast_example_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 11.715 seconds)


.. _sphx_glr_download_examples_09_stormcast_example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 09_stormcast_example.ipynb <09_stormcast_example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 09_stormcast_example.py <09_stormcast_example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 09_stormcast_example.zip <09_stormcast_example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
